--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,11 @@
   <artifactId>V1SDK</artifactId>
   <version>0.0.1</version>
   <packaging>jar</packaging>
-
-  <name>V1SDK</name>
-  <url>http://maven.apache.org</url>
-
+  <name>VersionOne.SDK.Java.ObjectModel</name>
+  <url>https://github.com/versionone/VersionOne.SDK.Java.ObjectModel</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <test.websiteurl>http://localhost/V1SDKTests</test.websiteurl>
+    <test.websiteurl>http://localhost/VersionOne.SDK.Java.ObjectModel</test.websiteurl>
   </properties>
 <repositories>
     <repository>
@@ -31,7 +29,7 @@
     </repository>  
 </repositories>
   <ciManagement>
-    <url>http://localhost/VersionOne.SDK.Java.APIClient.Tests</url>
+    <url>http://localhost/VersionOne.SDK.Java.ObjectModel.Tests</url>
   </ciManagement>
   <dependencies>
     <dependency>
