--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,13 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <test.websiteurl>http://localhost/VersionOne.SDK.Java.ObjectModel</test.websiteurl>
   </properties>
+  <distributionManagement>
+    <repository>
+        <id>BUILDSERVER1</id>
+        <name>BUILDSERVER1-releases</name>
+        <url>http://buildserver1:8081/artifactory/libs-release-local</url>
+    </repository>
+</distributionManagement>
 <repositories>
     <repository>
         <id>BUILDSERVER1</id>
