--- a/build.properties
+++ b/build.properties
@@ -22,10 +22,10 @@ fit.results.dir=C:/FitnesseTestSite/Results
 
 # The Object Model unit tests require an instance of V1.  This property specifies where to find the installer.
 v1ultimate.setup.exe=Common\\Data\\VersionOne.Setup-Ultimate.exe
-test.websiteurl=http://localhost:8080/V1JavaSDKTests/
+test.websiteurl=http://localhost/VersionOne.SDK.Java.ObjectModel.Tests/
 sql.data.dir=C:\\Program Files (x86)\\Microsoft SQL Server\\MSSQL.1\\MSSQL\\Data
-test.websiterootpath.name=IIS://localhost/W3SVC/1/ROOT V1JavaSDKTests 
-v1Install.dir=c:\\inetpub\\wwwroot\\V1JavaSDKTests 
+test.websiterootpath.name=IIS://localhost/W3SVC/1/ROOT VersionOne.SDK.Java.ObjectModel.Tests
+v1Install.dir=c:\\inetpub\\wwwroot\\VersionOne.SDK.Java.ObjectModel.Tests 
 test.license.file=Common\\Data\\Licenses\\VersionOne.Ultimate.lic
 
 ########## Debug parameters
