--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,20 @@
         <url>http://buildserver1:8081/artifactory/libs-release-local</url>
     </repository>
 </distributionManagement>
+<build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.12.4</version>
+        <configuration>
+          <includes>
+            <include>*Tester.java</include>
+          </includes>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 <repositories>
     <repository>
         <id>BUILDSERVER1</id>
