--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <url>https://github.com/versionone/VersionOne.SDK.Java.ObjectModel</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <test.websiteurl>http://localhost/VersionOne.SDK.Java.ObjectModel</test.websiteurl>
+    <test.websiteurl>http://localhost/VersionOne.SDK.Java.ObjectModel.Tests</test.websiteurl>
   </properties>
   <distributionManagement>
     <repository>
@@ -74,4 +74,8 @@
   		<version>2.6.0-RC2</version>
   	</dependency>
   </dependencies>
+  <organization>
+  	<name>Version One, Inc.</name>
+  	<url>http://www.versionone.com/</url>
+  </organization>
 </project>
