Fixing the broken Object Model Tests

--- a/src/main/resources/com/versionone/om/entities.properties
+++ b/src/main/resources/com/versionone/om/entities.properties
@@ -42,6 +42,7 @@ entities = \
   com.versionone.om.Environment,\
   com.versionone.om.RegressionTest,\
   com.versionone.om.Conversation,\
+  com.versionone.om.Expression,\
   com.versionone.om.listvalue.AttachmentType,\
   com.versionone.om.listvalue.BuildSource,\
   com.versionone.om.listvalue.BuildStatus,\
