--- a/pom.xml
+++ b/pom.xml
@@ -1,111 +1,133 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>com.versionone</groupId>
-    <artifactId>VersionOne.SDK.Java.ObjectModel</artifactId>
-    <version>12.1.0.150</version>
-    <packaging>jar</packaging>
-    <name>VersionOne.SDK.Java.ObjectModel</name>
-    <url>https://github.com/versionone/VersionOne.SDK.Java.ObjectModel</url>
-  <description>VersionOne, Inc. Java Object Model</description>
-  <licenses>
-        <license>
-            <name>VersionOne, Inc.</name>
-            <url>https://github.com/versionone/VersionOne.SDK.Java.ObjectModel/blob/master/LICENSE.md</url>
-            <distribution>repo</distribution>
-        </license>
-  </licenses>
-  <scm>
-      <url>https://github.com/versionone/VersionOne.SDK.Java.ObjectModel</url>
-      <connection>NA</connection>
-  </scm>
-  <developers>
-      <developer>
-          <name>Ian Buchanan</name>
-          <email>ian.buchanan@versionone.com</email>
-      </developer>
-      <developer>
-          <name>Greg Johnson</name>
-          <email>greg.johnson@versionone.com</email>
-      </developer>
-  </developers>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-    <distributionManagement>
-    <snapshotRepository>
-        <id>BUILDSERVER1</id>
-        <name>BUILDSERVER1-snapshots</name>
-        <url>http://buildserver1:8081/artifactory/libs-snapshot-local</url>
-    </snapshotRepository>
-        <repository>
-            <id>BUILDSERVER1</id>
-            <name>BUILDSERVER1-releases</name>
-            <url>http://buildserver1:8081/artifactory/libs-release-local</url>
-        </repository>
-    </distributionManagement>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.12.4</version>
-                <configuration>
-                    <systemPropertyVariables>
-                        <test.websiteurl>http://localhost/VersionOne.SDK.Java.ObjectModel.Tests/</test.websiteurl>
-                    </systemPropertyVariables>
-                    <skipTests>false</skipTests>
-                    <includes>
-                        <include>**/*Tester.java</include>
-                    </includes>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-    <repositories>
-        <repository>
-            <id>BUILDSERVER1</id>
-            <name>BUILDSERVER1-releases</name>
-            <url>http://buildserver1:8081/artifactory/libs-release-local</url>
-        </repository>
-        <repository>
-            <id>java.net-Public</id>
-            <name>Maven Java Net Snapshots and Releases</name>
-            <url>https://maven.java.net/content/groups/public/</url>
-        </repository>
-        <repository>
-            <id>repository.jboss.org-public</id>
-            <name>JBoss.org Maven repository</name>
-            <url>https://repository.jboss.org/nexus/content/groups/public</url>
-        </repository>
-    </repositories>
-    <ciManagement>
-        <url>http://localhost/VersionOne.SDK.Java.ObjectModel.Tests</url>
-    </ciManagement>
-    <dependencies>
-        <dependency>
-            <groupId>org.fitnesse</groupId>
-            <artifactId>fitnesse</artifactId>
-            <version>20111025</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jmock</groupId>
-            <artifactId>jmock-junit4</artifactId>
-            <version>2.6.0-RC2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jmock</groupId>
-            <artifactId>jmock-legacy</artifactId>
-            <version>2.6.0-RC2</version>
-        </dependency>
-        <dependency>
-        	<groupId>com.versionone</groupId>
-        	<artifactId>VersionOne.SDK.Java.APIClient</artifactId>
-        	<version>13.0.0.146</version>
-        </dependency>
-    </dependencies>
-    <organization>
-        <name>Version One, Inc.</name>
-        <url>http://www.versionone.com/</url>
-    </organization>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.versionone</groupId>
+	<artifactId>VersionOne.SDK.Java.ObjectModel</artifactId>
+	<version>13.0.0</version>
+	<packaging>jar</packaging>
+	<name>VersionOne.SDK.Java.ObjectModel</name>
+	<url>https://github.com/versionone/VersionOne.SDK.Java.ObjectModel</url>
+	<description>VersionOne, Inc. Java Object Model</description>
+	<licenses>
+		<license>
+			<name>VersionOne, Inc.</name>
+			<url>https://github.com/versionone/VersionOne.SDK.Java.ObjectModel/blob/master/LICENSE.md</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+	<scm>
+		<url>https://github.com/versionone/VersionOne.SDK.Java.ObjectModel</url>
+		<connection>scm:git:git@github.com:versionone/VersionOne.SDK.Java.ObjectModel.git</connection>
+		<developerConnection>scm:git:git@github.com:versionone/VersionOne.SDK.Java.ObjectModel.git</developerConnection>
+	</scm>
+	<developers>
+		<developer>
+			<name>Ian Buchanan</name>
+			<email>ian.buchanan@versionone.com</email>
+		</developer>
+		<developer>
+			<name>Greg Johnson</name>
+			<email>greg.johnson@versionone.com</email>
+		</developer>
+	</developers>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<github.global.server>github</github.global.server>
+	</properties>
+	<distributionManagement>
+		<snapshotRepository>
+			<id>BUILDSERVER1</id>
+			<name>BUILDSERVER1-snapshots</name>
+			<url>http://buildserver1:8081/artifactory/libs-snapshot-local</url>
+		</snapshotRepository>
+		<repository>
+			<id>BUILDSERVER1</id>
+			<name>BUILDSERVER1-releases</name>
+			<url>http://buildserver1:8081/artifactory/libs-release-local</url>
+		</repository>
+	</distributionManagement>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.12.4</version>
+				<configuration>
+					<systemPropertyVariables>
+						<test.websiteurl>http://localhost/VersionOne.SDK.Java.ObjectModel.Tests/</test.websiteurl>
+					</systemPropertyVariables>
+					<skipTests>false</skipTests>
+					<includes>
+						<include>**/*Tester.java</include>
+					</includes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.github.github</groupId>
+				<artifactId>site-maven-plugin</artifactId>
+				<version>0.8</version>
+				<configuration>
+					<message>Creating site for ${project.artifactId} ${project.version}</message>
+					<!-- <dryRun>true</dryRun>  -->
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>site</goal>
+						</goals>
+						<phase>site</phase>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+	<repositories>
+		<repository>
+			<id>BUILDSERVER1</id>
+			<name>BUILDSERVER1-releases</name>
+			<url>http://buildserver1:8081/artifactory/libs-release-local</url>
+		</repository>
+		<repository>
+			<id>java.net-Public</id>
+			<name>Maven Java Net Snapshots and Releases</name>
+			<url>https://maven.java.net/content/groups/public/</url>
+		</repository>
+		<repository>
+			<id>repository.jboss.org-public</id>
+			<name>JBoss.org Maven repository</name>
+			<url>https://repository.jboss.org/nexus/content/groups/public</url>
+		</repository>
+	</repositories>
+	<ciManagement>
+		<url>http://localhost/VersionOne.SDK.Java.ObjectModel.Tests</url>
+	</ciManagement>
+	<dependencies>
+		<dependency>
+			<groupId>org.fitnesse</groupId>
+			<artifactId>fitnesse</artifactId>
+			<version>20111025</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jmock</groupId>
+			<artifactId>jmock-junit4</artifactId>
+			<version>2.6.0-RC2</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jmock</groupId>
+			<artifactId>jmock-legacy</artifactId>
+			<version>2.6.0-RC2</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.versionone</groupId>
+			<artifactId>VersionOne.SDK.Java.APIClient</artifactId>
+			<version>13.0.0.146</version>
+		</dependency>
+	</dependencies>
+	<organization>
+		<name>Version One, Inc.</name>
+		<url>http://www.versionone.com/</url>
+	</organization>
 </project>
