--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.12.4</version>
 				<configuration>
 					<systemPropertyVariables>
 						<test.websiteurl>http://localhost/VersionOne.SDK.Java.ObjectModel.Tests/</test.websiteurl>
@@ -95,9 +94,19 @@
 				</executions>
 			</plugin>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<dependencies>
+					<dependency>
+						<groupId>org.apache.maven.doxia</groupId>
+						<artifactId>doxia-module-markdown</artifactId>
+						<version>1.4</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+			<plugin>
 				<groupId>com.github.github</groupId>
 				<artifactId>site-maven-plugin</artifactId>
-				<version>0.8</version>
 				<configuration>
 					<message>Creating site for ${project.artifactId} ${project.version}</message>
 					<!-- <dryRun>true</dryRun> -->
