--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.versionone</groupId>
 	<artifactId>VersionOne.SDK.Java.ObjectModel</artifactId>
-	<version>13.0.1</version>
+	<version>13.0.2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>VersionOne SDK.Java Object Model</name>
@@ -79,7 +79,6 @@
 					<systemPropertyVariables>
 						<test.websiteurl>http://localhost/VersionOne.SDK.Java.ObjectModel.Tests/</test.websiteurl>
 					</systemPropertyVariables>
-					<skipTests>false</skipTests>
 					<includes>
 						<include>**/*Tester.java</include>
 					</includes>
@@ -217,7 +216,7 @@
 		<dependency>
 			<groupId>com.versionone</groupId>
 			<artifactId>VersionOne.SDK.Java.APIClient</artifactId>
-			<version>13.0.0.146</version>
+			<version>13.0.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.fitnesse</groupId>
